--- a/utils/stdio/Makefile
+++ b/utils/stdio/Makefile
@@ -1,38 +1,15 @@
-AS= nasm
-FLAGS= -felf64 -gdwarf
+ASM=nasm
+AFLAGS=-felf64 -gdwarf
+SRC=main.asm astdio.asm utils.asm
+OBJ=$(SRC:.asm=.o)
+EXE=astdio
 
-LD= ld
+all: $(OBJ)
+	ld $(OBJ) -o $(EXE)
 
-CC= gcc
-
-SRC_TEST= ./test.asm
-SRC= ./Astdio.asm ./aprintf.asm
-SRC_C= ./ftoa.c
-
-OBJ_TEST= $(SRC_TEST:.asm=.o)
-OBJ_C= $(SRC_C:.c=.o)
-OBJ= $(SRC:.asm=.o)
-EXE= Astdio
-LIB_SH= libAstdio.so
-LIB_ST= libAstdio.a
-
-test: $(OBJ) $(OBJ_TEST)
-	$(LD) $(OBJ) $(OBJ_TEST) -o $(EXE)
-
-shared_lib: $(OBJ) 
-	$(CC) -shared -o $(LIB_SH) $(OBJ) 
- 
-static_lib: $(OBJ) 
-	ar -rc $(LIB_ST) $(OBJ) 
-	ranlib $(LIB_ST)
-
-
-
-%.o:%.asm
-	$(AS) $(FLAGS) $< 
-
-%.o:%.c
-	$(CC) -c $<
+%.o: %.asm
+	$(ASM) $(AFLAGS) $< -o $@
 
 clean:
-	$(RM) $(OBJ) $(EXE) $(LIB_ST) $(OBJ_C) $(OBJ_TEST) $(LIB_SH)
+	$(RM) $(OBJ) $(EXE)
+
